[gd_scene load_steps=25 format=3 uid="uid://uscng232c6ft"]

[ext_resource type="Texture2D" uid="uid://bs5q6dj1janba" path="res://assets/textures/Concrete032_1K_Color.jpg" id="1_n0dgu"]
[ext_resource type="Script" path="res://src/level/TutorialRoom04.gd" id="1_ychyn"]
[ext_resource type="Texture2D" uid="uid://2vkge5sq82io" path="res://assets/textures/Concrete032_1K_NormalGL.jpg" id="2_a0cgm"]
[ext_resource type="Texture2D" uid="uid://bgbwj0xrhuax4" path="res://assets/textures/Concrete032_1K_Roughness.jpg" id="3_vxj6q"]
[ext_resource type="Material" uid="uid://n131o6hbuf3i" path="res://src/level/brick_wall.material" id="5_7x2dl"]
[ext_resource type="Texture2D" uid="uid://bnw4nb66xp5q1" path="res://assets/textures/BrickMaterial_basecolor.png" id="5_r6log"]
[ext_resource type="Texture2D" uid="uid://buv7k5gp6k1da" path="res://assets/textures/BrickMaterial_ambientocclusion.png" id="6_2uubh"]
[ext_resource type="Texture2D" uid="uid://b02wd35fgv027" path="res://assets/textures/BrickMaterial_normal.png" id="7_bfu3r"]
[ext_resource type="PackedScene" uid="uid://cf5061yye8rjx" path="res://src/level/LevelExitDoor.tscn" id="7_fkkkj"]
[ext_resource type="PackedScene" uid="uid://b3ofo55hjbkv8" path="res://src/items/snare_trap.tscn" id="8_1cvir"]
[ext_resource type="Texture2D" uid="uid://q6oac64rhpwy" path="res://assets/textures/BrickMaterial_roughness.png" id="8_vt0d3"]
[ext_resource type="PackedScene" uid="uid://bca31hpk1jdsd" path="res://src/player/Player.tscn" id="9_03ha7"]
[ext_resource type="PackedScene" uid="uid://clof7yqajt3ui" path="res://src/level/TutorialRoom05.tscn" id="9_smmlg"]
[ext_resource type="Environment" uid="uid://h1bg78qp0wge" path="res://src/level/tutorial_env.tres" id="14_6ro8v"]

[sub_resource type="PlaneMesh" id="PlaneMesh_pqahu"]
size = Vector2(4, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cdlws"]
albedo_texture = ExtResource("1_n0dgu")
roughness_texture = ExtResource("3_vxj6q")
normal_enabled = true
normal_texture = ExtResource("2_a0cgm")
uv1_scale = Vector3(0.3, 1.4, 1)
uv1_offset = Vector3(0.5, 0.5, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_81oc5"]
data = PackedVector3Array(2, 0, 10, -2, 0, 10, 2, 0, -10, -2, 0, 10, -2, 0, -10, 2, 0, -10)

[sub_resource type="BoxMesh" id="BoxMesh_rc5qf"]
material = ExtResource("5_7x2dl")
size = Vector3(0.05, 8, 20)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_sd286"]
data = PackedVector3Array(-0.025, 4, 10, 0.025, 4, 10, -0.025, -4, 10, 0.025, 4, 10, 0.025, -4, 10, -0.025, -4, 10, 0.025, 4, -10, -0.025, 4, -10, 0.025, -4, -10, -0.025, 4, -10, -0.025, -4, -10, 0.025, -4, -10, 0.025, 4, 10, 0.025, 4, -10, 0.025, -4, 10, 0.025, 4, -10, 0.025, -4, -10, 0.025, -4, 10, -0.025, 4, -10, -0.025, 4, 10, -0.025, -4, -10, -0.025, 4, 10, -0.025, -4, 10, -0.025, -4, -10, 0.025, 4, 10, -0.025, 4, 10, 0.025, 4, -10, -0.025, 4, 10, -0.025, 4, -10, 0.025, 4, -10, -0.025, -4, 10, 0.025, -4, 10, -0.025, -4, -10, 0.025, -4, 10, 0.025, -4, -10, -0.025, -4, -10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dh2tq"]
albedo_texture = ExtResource("5_r6log")
roughness_texture = ExtResource("8_vt0d3")
normal_enabled = true
normal_texture = ExtResource("7_bfu3r")
ao_enabled = true
ao_texture = ExtResource("6_2uubh")
uv1_scale = Vector3(5, 2, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_cb64v"]
data = PackedVector3Array(-0.025, 4, 10, 0.025, 4, 10, -0.025, -4, 10, 0.025, 4, 10, 0.025, -4, 10, -0.025, -4, 10, 0.025, 4, -10, -0.025, 4, -10, 0.025, -4, -10, -0.025, 4, -10, -0.025, -4, -10, 0.025, -4, -10, 0.025, 4, 10, 0.025, 4, -10, 0.025, -4, 10, 0.025, 4, -10, 0.025, -4, -10, 0.025, -4, 10, -0.025, 4, -10, -0.025, 4, 10, -0.025, -4, -10, -0.025, 4, 10, -0.025, -4, 10, -0.025, -4, -10, 0.025, 4, 10, -0.025, 4, 10, 0.025, 4, -10, -0.025, 4, 10, -0.025, 4, -10, 0.025, 4, -10, -0.025, -4, 10, 0.025, -4, 10, -0.025, -4, -10, 0.025, -4, 10, 0.025, -4, -10, -0.025, -4, -10)

[sub_resource type="BoxMesh" id="BoxMesh_ijy38"]
material = ExtResource("5_7x2dl")
size = Vector3(4, 8, 0.05)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_8tlyy"]
data = PackedVector3Array(-2, 4, 0.025, 2, 4, 0.025, -2, -4, 0.025, 2, 4, 0.025, 2, -4, 0.025, -2, -4, 0.025, 2, 4, -0.025, -2, 4, -0.025, 2, -4, -0.025, -2, 4, -0.025, -2, -4, -0.025, 2, -4, -0.025, 2, 4, 0.025, 2, 4, -0.025, 2, -4, 0.025, 2, 4, -0.025, 2, -4, -0.025, 2, -4, 0.025, -2, 4, -0.025, -2, 4, 0.025, -2, -4, -0.025, -2, 4, 0.025, -2, -4, 0.025, -2, -4, -0.025, 2, 4, 0.025, -2, 4, 0.025, 2, 4, -0.025, -2, 4, 0.025, -2, 4, -0.025, 2, 4, -0.025, -2, -4, 0.025, 2, -4, 0.025, -2, -4, -0.025, 2, -4, 0.025, 2, -4, -0.025, -2, -4, -0.025)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_j2lui"]
data = PackedVector3Array(-2, 4, 0.025, 2, 4, 0.025, -2, -4, 0.025, 2, 4, 0.025, 2, -4, 0.025, -2, -4, 0.025, 2, 4, -0.025, -2, 4, -0.025, 2, -4, -0.025, -2, 4, -0.025, -2, -4, -0.025, 2, -4, -0.025, 2, 4, 0.025, 2, 4, -0.025, 2, -4, 0.025, 2, 4, -0.025, 2, -4, -0.025, 2, -4, 0.025, -2, 4, -0.025, -2, 4, 0.025, -2, -4, -0.025, -2, 4, 0.025, -2, -4, 0.025, -2, -4, -0.025, 2, 4, 0.025, -2, 4, 0.025, 2, 4, -0.025, -2, 4, 0.025, -2, 4, -0.025, 2, 4, -0.025, -2, -4, 0.025, 2, -4, 0.025, -2, -4, -0.025, 2, -4, 0.025, 2, -4, -0.025, -2, -4, -0.025)

[node name="TutorialRoom04" type="Node3D"]
script = ExtResource("1_ychyn")

[node name="RoomGeometry" type="Node3D" parent="."]

[node name="FloorMesh" type="MeshInstance3D" parent="RoomGeometry"]
mesh = SubResource("PlaneMesh_pqahu")
surface_material_override/0 = SubResource("StandardMaterial3D_cdlws")

[node name="StaticBody3D" type="StaticBody3D" parent="RoomGeometry/FloorMesh"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RoomGeometry/FloorMesh/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_81oc5")

[node name="WallMesh01" type="MeshInstance3D" parent="RoomGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 4, 0)
mesh = SubResource("BoxMesh_rc5qf")

[node name="StaticBody3D" type="StaticBody3D" parent="RoomGeometry/WallMesh01"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.191338, 0.0286112, -0.0275078)
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="RoomGeometry/WallMesh01/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_sd286")

[node name="WallMesh02" type="MeshInstance3D" parent="RoomGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 4, 0)
mesh = SubResource("BoxMesh_rc5qf")
surface_material_override/0 = SubResource("StandardMaterial3D_dh2tq")

[node name="StaticBody3D" type="StaticBody3D" parent="RoomGeometry/WallMesh02"]
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="RoomGeometry/WallMesh02/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_cb64v")

[node name="WallMesh03" type="MeshInstance3D" parent="RoomGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 10)
mesh = SubResource("BoxMesh_ijy38")

[node name="StaticBody3D" type="StaticBody3D" parent="RoomGeometry/WallMesh03"]
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="RoomGeometry/WallMesh03/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_8tlyy")

[node name="WallMesh04" type="MeshInstance3D" parent="RoomGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -10)
mesh = SubResource("BoxMesh_ijy38")

[node name="StaticBody3D" type="StaticBody3D" parent="RoomGeometry/WallMesh04"]
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="RoomGeometry/WallMesh04/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_j2lui")

[node name="LevelExitDoor" parent="RoomGeometry" instance=ExtResource("7_fkkkj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.94679)
goto_scene = ExtResource("9_smmlg")

[node name="OmniLight3D" type="OmniLight3D" parent="RoomGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.246, 0)
light_energy = 3.253
shadow_enabled = true
omni_range = 40.0

[node name="RoomItems" type="Node3D" parent="."]

[node name="SnareTrap01" parent="RoomItems" instance=ExtResource("8_1cvir")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0354891, 2.55915)

[node name="SnareTrap02" parent="RoomItems" instance=ExtResource("8_1cvir")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0354891, -4.06291)

[node name="Guards" type="Node3D" parent="."]

[node name="Player" parent="." instance=ExtResource("9_03ha7")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.0483162, 7.11958)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("14_6ro8v")
